# lockindicator-applet

./: .gitignore  .project  .pydevproject  Doxyfile  INSTALL  Makefile.in  README  configure  configure.ac  setup.py.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
servers/: LockIndicatorApplet.server  LockIndicatorApplet.server.in
share/lockindicator-applet/: CapsLockIndicator-OFF.xcf  CapsLockIndicator-ON.xcf  NumLockIndicator.xcf
src/: LockIndicatorMain.py
src/applet/: Constants.py.in  LockIndicator.py  __init__.py
